# LearnTinyRenderer

./: .gitignore  CMakeLists.txt  main.cpp  rasterizer.h
src/: CMakeLists.txt  InterpolationCorrect.cpp  Lesson1.cpp  Lesson2.cpp  Lesson3.cpp  Lesson5.cpp  Lesson6.cpp  Lesson6bis.cpp  Lesson7.cpp  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  model_lesson3.cpp  model_lesson3.h  our_gl.cpp  our_gl.h  renderer.cpp  renderer.h  tgaimage.cpp  tgaimage.h  vector.h
src/shaders/: normal_mapping.txt  normal_mapping_tangent.txt
